# ch32-rs-nightlies

./: Cargo.toml  README.md
ch32l1/: Cargo.toml  README.md  build.rs
ch32l1/src/: lib.rs
ch32l1/src/ch32l103/: device.x  mod.rs
ch32v0/: Cargo.toml  README.md  build.rs
ch32v0/src/: lib.rs
ch32v0/src/ch32v003/: device.x  mod.rs
ch32v1/: Cargo.toml  README.md  build.rs  device.x  lib.rs
ch32v1/src/: generic.rs  lib.rs
ch32v1/src/ch32v103/: device.x  mod.rs
ch32v2/: Cargo.toml  README.md  build.rs  lib.rs
ch32v2/src/: generic.rs  lib.rs
ch32v2/src/ch32v20x/: device.x
ch32v3/: Cargo.toml  README.md  build.rs  device.x  generic.rs
ch32v3/src/: lib.rs
ch32v3/src/ch32v30x/: device.x
ch32x0/: Cargo.toml  README.md  build.rs
ch32x0/src/: lib.rs
ch32x0/src/ch32x035/: device.x  mod.rs
ch56x/: Cargo.toml  README.md  build.rs
ch56x/src/: lib.rs
ch56x/src/ch56x/: mod.rs
ch57x/: Cargo.toml  README.md  build.rs
ch57x/src/: lib.rs
ch57x/src/ch57x/: device.x  mod.rs
ch58x/: Cargo.toml  README.md  build.rs
ch58x/src/: generic.rs  lib.rs
ch58x/src/ch58x/: device.x  mod.rs
ch59x/: Cargo.toml  README.md  build.rs
ch59x/src/: lib.rs
ch59x/src/ch59x/: device.x  mod.rs
ch641/: Cargo.toml  README.md  build.rs
ch641/src/: lib.rs
ch641/src/ch641/: device.x  mod.rs
ch643/: Cargo.toml  README.md  build.rs
ch643/src/: lib.rs
ch643/src/ch643/: device.x  mod.rs
