[package]
edition = "2021"
name = "ch32v1"
version = "0.1.4"
authors = ["Andelf <andelf@gmail.com>", "ch32-rs Contributors"]
description = "Device support crates for CH32V1 devices"
repository = "https://github.com/ch32-rs/ch32-rs"
readme = "README.md"
keywords = ["wch", "ch32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT/Apache-2.0"

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv = "0.9.0"
riscv-rt = { version = "0.10.0", optional = true }
vcell = "0.1.0"

[package.metadata.docs.rs]
features = ['rt', 'ch32v103']
default-target = "riscv32imac-unknown-none-elf"
targets = []

[features]
default = ["rt"]
rt = ["riscv-rt"]
ch32v103 = []
