[package]
name = "ch32v2"
version = "0.1.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/ch32-rs"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for CH32V208 chips (alias for ch32v3)"
keywords = ["wch", "ch32", "svd2rust", "peripheral", "embedded"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
path = "lib.rs"

[features]
default = []
rt = ["ch32v3/rt"]

[dependencies]
ch32v3 = "0.1"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features = ["rt"]
targets = []
