[package]
name = "ch32v3"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32-rs/ch32-rs"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for CH32V303/CH32V305/CH32V307 chips (generated using svd2rust)"
keywords = ["wch", "ch32", "svd2rust", "peripheral", "embedded"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
path = "lib.rs"

[features]
default = []
rt = []

[dependencies]
vcell = "0.1.3"
riscv = "0.8.0"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features = ["rt"]
targets = []
